--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <button onclick="renderProducts('PICADAS')"><span class="icon">🥟</span>Entradas</button>
     <button onclick="renderProducts('COMIDAS')"><span class="icon">🍽️</span>Comidas</button>
     <button onclick="renderProducts('POSTRES')"><span class="icon">🍰</span>Postres</button>
-    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Refrescos y Vinos</button>
+    <button onclick="renderProducts('REFESCOS Y VINOS')"><span class="icon">🥤🍷</span>Refrescos y Vinos</button>
     <button onclick="renderProducts('TRAGOS')"><span class="icon">🍹⏰</span>Tragos y Happy Hour</button>
     <button onclick="renderProducts('EVENTOS')"><span class="icon">⭐</span>Eventos y Novedades</button>
   </nav>
