--- a/admin.html
+++ b/admin.html
@@ -117,7 +117,7 @@
   <div class="banner">Panel de Administración - Tilo Café ☕</div>
 
   <div class="search-box">
-    <input type="text" id="searchInput" placeholder="🔍 Buscar producto...">
+    <input type="text" id="searchInput" placeholder="🔍 Buscar producto... (presione Enter)">
   </div>
 
   <div class="form-container">
@@ -176,15 +176,22 @@
       });
     }
 
-    // Buscador
-    document.getElementById('searchInput').addEventListener('input', e => {
-      const term = e.target.value.toLowerCase();
-      const filtrados = productos.filter(p => 
-        p.nombre.toLowerCase().includes(term) ||
-        p.descripcion.toLowerCase().includes(term) ||
-        p.categoria.toLowerCase().includes(term)
-      );
-      renderProducts(filtrados);
+    // 🔍 Buscador con Enter
+    const searchInput = document.getElementById('searchInput');
+    searchInput.addEventListener('keydown', e => {
+      if (e.key === 'Enter') {
+        e.preventDefault();
+        const term = searchInput.value.toLowerCase().trim();
+        const filtrados = productos.filter(p => 
+          p.nombre.toLowerCase().includes(term) ||
+          p.descripcion.toLowerCase().includes(term) ||
+          p.categoria.toLowerCase().includes(term)
+        );
+        renderProducts(filtrados);
+
+        // 🔥 Desplazar suavemente hacia los resultados
+        document.getElementById('product-list').scrollIntoView({ behavior: 'smooth' });
+      }
     });
 
     // Guardar producto
