--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #89ac76;
+      background: #669687;
       color: #45270a;
     }
     header {
